[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/CalendarGUI.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[node name="Calendar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CalendarGUI" type="PanelContainer" parent="."]
margin_right = 541.0
margin_bottom = 535.0

[node name="vbox" type="VBoxContainer" parent="CalendarGUI"]
margin_left = 7.0
margin_top = 7.0
margin_right = 534.0
margin_bottom = 528.0

[node name="hbox_month_year" type="HBoxContainer" parent="CalendarGUI/vbox"]
margin_right = 527.0
margin_bottom = 54.0
alignment = 1

[node name="button_prev_month" type="Button" parent="CalendarGUI/vbox/hbox_month_year"]
margin_left = 88.0
margin_right = 120.0
margin_bottom = 54.0
text = "<"

[node name="button_prev_year" type="Button" parent="CalendarGUI/vbox/hbox_month_year"]
margin_left = 124.0
margin_right = 176.0
margin_bottom = 54.0
text = "<<"

[node name="label_month_year" type="Label" parent="CalendarGUI/vbox/hbox_month_year"]
margin_left = 180.0
margin_top = 3.0
margin_right = 344.0
margin_bottom = 51.0
text = "Jan 2016"
align = 1
valign = 1

[node name="button_next_year" type="Button" parent="CalendarGUI/vbox/hbox_month_year"]
margin_left = 348.0
margin_right = 402.0
margin_bottom = 54.0
text = ">>"

[node name="button_next_month" type="Button" parent="CalendarGUI/vbox/hbox_month_year"]
margin_left = 406.0
margin_right = 439.0
margin_bottom = 54.0
text = ">"

[node name="hbox_deadspace" type="HBoxContainer" parent="CalendarGUI/vbox"]
margin_top = 58.0
margin_right = 527.0
margin_bottom = 106.0
alignment = 1

[node name="label_empty" type="Label" parent="CalendarGUI/vbox/hbox_deadspace"]
margin_left = 253.0
margin_right = 273.0
margin_bottom = 48.0
text = "  "
align = 1
valign = 1

[node name="hbox_label_days" type="GridContainer" parent="CalendarGUI/vbox"]
margin_top = 110.0
margin_right = 527.0
margin_bottom = 158.0
custom_constants/hseparation = 10
columns = 7

[node name="label_sunday" type="Label" parent="CalendarGUI/vbox/hbox_label_days"]
margin_right = 68.0
margin_bottom = 48.0
rect_min_size = Vector2( 30, 15 )
text = "Sun"
align = 1

[node name="label_monday" type="Label" parent="CalendarGUI/vbox/hbox_label_days"]
margin_left = 78.0
margin_right = 158.0
margin_bottom = 48.0
rect_min_size = Vector2( 30, 15 )
text = "Mon"
align = 1

[node name="label_thuesday" type="Label" parent="CalendarGUI/vbox/hbox_label_days"]
margin_left = 168.0
margin_right = 235.0
margin_bottom = 48.0
text = "Tue"
align = 1

[node name="label_wednesday" type="Label" parent="CalendarGUI/vbox/hbox_label_days"]
margin_left = 245.0
margin_right = 324.0
margin_bottom = 48.0
rect_min_size = Vector2( 30, 15 )
text = "Wed"
align = 1

[node name="label_thursday" type="Label" parent="CalendarGUI/vbox/hbox_label_days"]
margin_left = 334.0
margin_right = 402.0
margin_bottom = 48.0
rect_min_size = Vector2( 30, 15 )
text = "Thu"
align = 1

[node name="label_friday" type="Label" parent="CalendarGUI/vbox/hbox_label_days"]
margin_left = 412.0
margin_right = 458.0
margin_bottom = 48.0
rect_min_size = Vector2( 30, 15 )
text = "Fri"
align = 1

[node name="label_saturday" type="Label" parent="CalendarGUI/vbox/hbox_label_days"]
margin_left = 468.0
margin_right = 527.0
margin_bottom = 48.0
text = "Sat"
align = 1

[node name="hbox_days" type="GridContainer" parent="CalendarGUI/vbox"]
margin_top = 162.0
margin_right = 527.0
margin_bottom = 521.0
custom_constants/vseparation = 7
custom_constants/hseparation = 10
columns = 7

[node name="btn_0" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_right = 12.0
margin_bottom = 54.0
disabled = true

[node name="btn_1" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 22.0
margin_right = 34.0
margin_bottom = 54.0
disabled = true

[node name="btn_2" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 44.0
margin_right = 56.0
margin_bottom = 54.0
disabled = true

[node name="btn_3" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 66.0
margin_right = 78.0
margin_bottom = 54.0
disabled = true

[node name="btn_4" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 88.0
margin_right = 100.0
margin_bottom = 54.0
disabled = true

[node name="btn_5" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 110.0
margin_right = 122.0
margin_bottom = 54.0
disabled = true

[node name="btn_6" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 132.0
margin_right = 144.0
margin_bottom = 54.0
disabled = true

[node name="btn_7" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_top = 61.0
margin_right = 12.0
margin_bottom = 115.0
disabled = true

[node name="btn_8" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 22.0
margin_top = 61.0
margin_right = 34.0
margin_bottom = 115.0
disabled = true

[node name="btn_9" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 44.0
margin_top = 61.0
margin_right = 56.0
margin_bottom = 115.0
disabled = true

[node name="btn_10" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 66.0
margin_top = 61.0
margin_right = 78.0
margin_bottom = 115.0
disabled = true

[node name="btn_11" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 88.0
margin_top = 61.0
margin_right = 100.0
margin_bottom = 115.0
disabled = true

[node name="btn_12" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 110.0
margin_top = 61.0
margin_right = 122.0
margin_bottom = 115.0
disabled = true

[node name="btn_13" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 132.0
margin_top = 61.0
margin_right = 144.0
margin_bottom = 115.0
disabled = true

[node name="btn_14" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_top = 122.0
margin_right = 12.0
margin_bottom = 176.0
disabled = true

[node name="btn_15" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 22.0
margin_top = 122.0
margin_right = 34.0
margin_bottom = 176.0
disabled = true

[node name="btn_16" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 44.0
margin_top = 122.0
margin_right = 56.0
margin_bottom = 176.0
disabled = true

[node name="btn_17" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 66.0
margin_top = 122.0
margin_right = 78.0
margin_bottom = 176.0
disabled = true

[node name="btn_18" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 88.0
margin_top = 122.0
margin_right = 100.0
margin_bottom = 176.0
disabled = true

[node name="btn_19" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 110.0
margin_top = 122.0
margin_right = 122.0
margin_bottom = 176.0
disabled = true

[node name="btn_20" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 132.0
margin_top = 122.0
margin_right = 144.0
margin_bottom = 176.0
disabled = true

[node name="btn_21" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_top = 183.0
margin_right = 12.0
margin_bottom = 237.0
disabled = true

[node name="btn_22" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 22.0
margin_top = 183.0
margin_right = 34.0
margin_bottom = 237.0
disabled = true

[node name="btn_23" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 44.0
margin_top = 183.0
margin_right = 56.0
margin_bottom = 237.0
disabled = true

[node name="btn_24" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 66.0
margin_top = 183.0
margin_right = 78.0
margin_bottom = 237.0
disabled = true

[node name="btn_25" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 88.0
margin_top = 183.0
margin_right = 100.0
margin_bottom = 237.0
disabled = true

[node name="btn_26" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 110.0
margin_top = 183.0
margin_right = 122.0
margin_bottom = 237.0
disabled = true

[node name="btn_27" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 132.0
margin_top = 183.0
margin_right = 144.0
margin_bottom = 237.0
disabled = true

[node name="btn_28" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_top = 244.0
margin_right = 12.0
margin_bottom = 298.0
disabled = true

[node name="btn_29" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 22.0
margin_top = 244.0
margin_right = 34.0
margin_bottom = 298.0
disabled = true

[node name="btn_30" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 44.0
margin_top = 244.0
margin_right = 56.0
margin_bottom = 298.0
disabled = true

[node name="btn_31" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 66.0
margin_top = 244.0
margin_right = 78.0
margin_bottom = 298.0
disabled = true

[node name="btn_32" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 88.0
margin_top = 244.0
margin_right = 100.0
margin_bottom = 298.0
disabled = true

[node name="btn_33" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 110.0
margin_top = 244.0
margin_right = 122.0
margin_bottom = 298.0
disabled = true

[node name="btn_34" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 132.0
margin_top = 244.0
margin_right = 144.0
margin_bottom = 298.0
disabled = true

[node name="btn_35" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_top = 305.0
margin_right = 12.0
margin_bottom = 359.0
disabled = true

[node name="btn_36" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 22.0
margin_top = 305.0
margin_right = 34.0
margin_bottom = 359.0
disabled = true

[node name="btn_37" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 44.0
margin_top = 305.0
margin_right = 56.0
margin_bottom = 359.0
disabled = true

[node name="btn_38" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 66.0
margin_top = 305.0
margin_right = 78.0
margin_bottom = 359.0
disabled = true

[node name="btn_39" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 88.0
margin_top = 305.0
margin_right = 100.0
margin_bottom = 359.0
disabled = true

[node name="btn_40" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 110.0
margin_top = 305.0
margin_right = 122.0
margin_bottom = 359.0
disabled = true

[node name="btn_41" type="Button" parent="CalendarGUI/vbox/hbox_days"]
margin_left = 132.0
margin_top = 305.0
margin_right = 144.0
margin_bottom = 359.0
disabled = true
